--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,3 +1,9 @@
+
+.order-history {
+    max-height: 416px; /* height of profile form adjacent and submit button */
+    overflow-y: auto;
+}
+
 .profile-form-input .form-control{
     color: #000;
 }
